collapse chat - v1-not work properly - bug with zIndex
Former-commit-id: cc6d3284401c302acf93c614dda96dca021a6fea

--- a/packages/client/components/ui/InstanceChat/InstanceChat.module.scss
+++ b/packages/client/components/ui/InstanceChat/InstanceChat.module.scss
@@ -6,6 +6,8 @@
   left: 0;
   width: 100vw;
   justify-content: flex-end;
+  z-index: 1400;
+
 
   .chat-box {
     display: flex;
@@ -55,17 +57,9 @@
       height: 100%;
     }
 
-    .message-container {
-      display: flex;
-      flex-direction: column;
-      border-radius: 5px 5px 0 0 ;
 
-      .first-message-placeholder {
-        font-size: 2em;
-        margin: auto;
-      }
-    }
   }
+
 
   ul {
     min-height: 0;
@@ -109,5 +103,21 @@
         display: flex;
       }
     }
+  }
+}
+
+.message-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px 5px 0 0 ;
+  height: 35vh !important;
+  width: 50%;
+  left: 50% !important;
+  right: 50%;
+  padding-bottom: 40px;
+
+  .first-message-placeholder {
+    font-size: 2em;
+    margin: auto;
   }
 }
